# mfid

./: IMPROVEMENTS.md  LICENCE.txt  README.md  cursor_rules.md  main.py  pyproject.toml  requirements.txt  setup.py
mfid/: __init__.py  cli.py
mfid.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
mfid/analysis/: __init__.py  analysis_app.py
mfid/app/: mfid_app.py
mfid/body/: ___init___.py  body_app.py
mfid/detection/: detection_app.py
mfid/face/: ___init___.py  annotation_interface.py  face_annotator.py  face_app.py  face_detector.py  quality_assessment.py
mfid/identity/: ___init___.py  identity_app.py  training_identity.py
mfid/settings/: settings_app.py
mfid/training/: custom_training_app.py
mfid/utils/: batch.py  config_manager.py  logging_utils.py  notifications.py  theme_dark.py
old_app/: anno.py  annotator_to_merge.py  requirements.txt
